fixing a spacing problem

--- a/src/styles/warning.css
+++ b/src/styles/warning.css
@@ -18,12 +18,12 @@ body {
   .warning {
     text-align: center;
     position: absolute;
-    top: 50%;
+    top: 70%;
     color: black;
     font-size: 20px;
     background-color: #4ABCFC;
     width: 300px;
     padding-top: 700px;
-    margin-bottom: 400px;
+    margin-bottom: 800px;
   }
 }
